# crustrace

./: .pre-commit-config.yaml  Cargo.toml  Justfile  README.md  TODO.md  taplo.toml
.just/: hooks.just
crustrace/: CHANGELOG.md  Cargo.toml
crustrace-attributes/: Cargo.toml
crustrace-attributes/src/: lib.rs
crustrace-core/: CHANGELOG.md  Cargo.toml  basic.rs
crustrace-core/src/: function_extractor.rs  lib.rs  omnibus.rs  parse.rs  token_processors.rs  tracer.rs
crustrace-core/src/parse/: tests.rs
crustrace-core/src/token_processors/: tests.rs
crustrace-core/src/tracer/: extract_param_fields_tests.rs  ret_dbg_tests.rs
crustrace-core/tests/: basic.rs  negative.rs  parent.rs  patterns.rs  ret.rs  target.rs
crustrace-core/tests/snapshots/: basic__generic_function.snap  basic__ignores_non_functions.snap  basic__impl_block_methods.snap  basic__impl_block_with_generics.snap  basic__module_with_functions.snap  basic__multiple_functions.snap  basic__single_function.snap  negative__basic_function_gets_instrumented.snap  negative__complex_edge_cases.snap  negative__function_returning_fn_type.snap  negative__function_with_fn_type_parameter.snap  negative__ignores_fn_in_comments.snap  negative__ignores_fn_in_string_literals.snap  negative__ignores_function_calls_in_expressions.snap  negative__ignores_type_alias_with_fn.snap  negative__trait_method_declarations.snap  negative__trait_with_default_method.snap  negative__trait_with_trait_method_and_default_method.snap  negative__trait_with_trait_method_and_default_method_rev.snap  parent__parent_field_access.snap  parent__parent_function_call.snap  parent__parent_method_call.snap  parent__parent_none_expression.snap  parent__parent_reference.snap  parent__parent_string_literal.snap  parent__parent_variable.snap  parent__parent_with_other_args.snap  patterns__async_function.snap  patterns__async_function_with_params.snap  patterns__async_unsafe_function.snap  patterns__basic_function.snap  patterns__const_function.snap  patterns__const_function_with_where_clause.snap  patterns__const_unsafe_function.snap  patterns__extern_c_function.snap  patterns__extern_system_function.snap  patterns__impl_block_methods.snap  patterns__mixed_content_with_functions.snap  patterns__pub_async_function.snap  patterns__pub_async_unsafe_function.snap  (+39 more)
crustrace-mermaid/: CHANGELOG.md  Cargo.toml  README.md
crustrace-mermaid/src/: lib.rs  visitor.rs
crustrace-mermaid/tests/: escaping.rs  escaping_slices.rs  integration.rs  param_keys.rs
crustrace-mermaid/tests/snapshots/: escaping__escaping_tests__snapshot_needs_escaping.snap  escaping_slices__escaping_slices_tests__snapshot_slice_cases.snap  integration__tests__snapshot_merge_by_name.snap  integration__tests__snapshot_unique_per_call.snap  param_keys__param_keys_tests__snapshot_single_node.snap  param_keys__param_keys_tests__snapshot_single_node_grouped.snap
crustrace/src/: lib.rs
examples/: fib.rs  fib_new_instrument.rs  instrument_fib.rs  mermaid_demo.rs  omni_mod_fib.rs  omni_struct_fib.rs
examples/fib/: Cargo.toml
examples/fib/src/: main.rs
examples/fib_new/: Cargo.toml
examples/fib_new/src/: lib.rs  main.rs
examples/instrument_fib/: Cargo.toml
examples/instrument_fib/src/: lib.rs  main.rs
examples/omni_fib/: Cargo.toml
examples/omni_fib/src/: main.rs
examples/omni_mod_fib/: Cargo.toml
examples/omni_mod_fib/src/: lib.rs  main.rs
examples/omni_struct_fib/: Cargo.toml
examples/omni_struct_fib/src/: lib.rs  main.rs
