[workspace]
members = [
  "crustrace",
  "crustrace-attributes",
  "crustrace-core",
  "examples/fib_new",
]
resolver = "2"

[workspace.dependencies]
crustrace-attributes = { path = "crustrace-attributes", version = "*" }
insta = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
rust-format = { features = ["proc-macro2", "token_stream"], version = "0.3.4" }
tracing = { default-features = false, version = "0.1.41" }
tracing-subscriber = { default-features = false, version = "0.3" }
unsynn = { default-features = false, version = "0.1.1" }
