[workspace]
members = [
  "crustrace",
  "crustrace-core",
  "examples/instrument_fib",
  "examples/omni_mod_fib",
  "examples/omni_struct_fib",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lmmx/crustace"
rust-version = "1.87.0"

[workspace.dependencies]
cargo-husky = { version = "1.5.0", default-features = false }
crustrace = { version = "0.1.6", path = "crustrace" }
crustrace-core = { version = "0.1.6", path = "crustrace-core" }
insta = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
rust-format = { features = ["proc-macro2", "token_stream"], version = "0.3.4" }
tracing = { default-features = false, version = "0.1.41" }
tracing-subscriber = { default-features = false, version = "0.3", features = [
  "ansi", # coloured
  "fmt",  # printable
] }
unsynn = { default-features = false, version = "0.1.1" }
