[package]
edition = "2024"
name = "crustrace-attributes"
version = "0.1.0"

description = "Procedural macro attributes for automatically instrumenting functions with tracing (unsynn-based)"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
unsynn.workspace = true

[dev-dependencies]
insta.workspace = true
rust-format.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
