[package]
description = "Core functionality for crustrace - procedural macro implementation for function tracing"
documentation = "https://docs.rs/crustrace-core"
edition = "2024"
homepage = "https://github.com/lmmx/crustrace"
include = ["README.md", "src/**/*"]
license = "MIT OR Apache-2.0"
name = "crustrace-core"
readme = "../README.md"
repository = "https://github.com/lmmx/crustrace"
version = "0.1.0"

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
unsynn.workspace = true

[dev-dependencies]
insta.workspace = true
rust-format.workspace = true
