[package]
description = "Core functionality for crustrace - procedural macro implementation for function tracing"
documentation = "https://docs.rs/crustrace-core"
edition.workspace = true
homepage = "https://github.com/lmmx/crustrace"
include = ["README.md", "src/**/*"]
license.workspace = true
name = "crustrace-core"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.8"

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
unsynn.workspace = true

[dev-dependencies]
insta.workspace = true
rust-format.workspace = true

[features]
# Default build has no special formatting — uses Display (`#param_name`)
default = []
# Enables Debug (`?#param_name`) formatting of params
debug = []
