[package]
description = "Tracing subscriber layer that renders crustrace spans as Mermaid flowcharts"
documentation = "https://docs.rs/crustrace-mermaid"
edition.workspace = true
homepage = "https://github.com/lmmx/crustrace"
license.workspace = true
name = "crustrace-mermaid"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.5"

[dependencies]
tracing.workspace = true
tracing-subscriber = { features = ["registry"], workspace = true }

[dev-dependencies]
crustrace.workspace = true
insta.workspace = true
tracing = { features = ["std"], workspace = true }

[features]
debug = ["crustrace/debug"]
default = ["debug"]
