[package]
description = "Function and module-level procedural macro attributes to instrument functions with tracing"
documentation = "https://docs.rs/crustrace"
edition = "2024"
homepage = "https://github.com/lmmx/crustrace"
license = "MIT OR Apache-2.0"
name = "crustrace"
readme = "../README.md"
repository = "https://github.com/lmmx/crustrace"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
crustrace-core = { workspace = true }
proc-macro2.workspace = true

[dev-dependencies]
cargo-husky = { workspace = true, features = ["user-hooks"] }
insta.workspace = true
rust-format.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
