[package]
description = "Function and module-level procedural macro attributes to instrument functions with tracing"
documentation = "https://docs.rs/crustrace"
edition.workspace = true
homepage = "https://github.com/lmmx/crustrace"
include = ["README.md", "src/**/*"]
license.workspace = true
name = "crustrace"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.8"

[lib]
proc-macro = true

[dependencies]
crustrace-core = { workspace = true }
proc-macro2.workspace = true

[dev-dependencies]
cargo-husky = { features = ["user-hooks"], workspace = true }
insta.workspace = true
rust-format.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
debug = ["crustrace-core/debug"]
default = []
